syntax = "proto3";
package sonrio.sonr.registry;
import "registry/credential.proto";

option go_package = "github.com/sonr-io/blockchain/x/registry/types";

// WhoIs is the entry pointing a registered name to a user account address
// Did Url string, and a DIDDocument.
message WhoIs {
  // Name is the registered name of the User or Application
  string name = 1;

  // DID is the DID of the account
  string did = 2;

  // Document is the DID Document of the registered name and account
  // encoded as JSON
  bytes document = 3;

  // Creator is the Account Address of the creator of the DID Document
  string creator = 4;

  // Credentials are the biometric info of the registered name and account
  // encoded with public key
  repeated Credential credentials = 5;

  // Type is the type of the registered name
  Type type = 6;

  // Additional Metadata for associated WhoIs
  map<string, string> metadata = 7;

  // Timestamp is the time of the last update of the DID Document
  int64 timestamp = 8;

  // IsActive is the status of the DID Document
  bool is_active = 9;

  // Type is the type of the registered name
  enum Type {
    // User is the type of the registered name
    User = 0;

    // Application is the type of the registered name
    Application = 1;
  }
}

// Session is the metadata for current user or application
message Session {
	// Base DID is the current Account or Application whois DID url
	string base_did = 1;

	// WhoIs is the current Document for the DID
	WhoIs whois = 2;

	// Credential is the current Credential for the DID
	Credential credential = 3;
}
